syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/moderation";
package messages.moderation;

message Item {
	string type = 1;
	string channel_id = 2;
	bool enabled = 3;
	int32 ban_time = 4;
	string ban_message = 5;
	string warning_message = 6;
	bool check_clips = 7;
	int32 trigger_length = 8;
	int32 max_percentage = 9;
	repeated string deny_list = 10;
	repeated string denied_chat_languages = 11;
	repeated string excluded_roles = 12;
	int32 max_warnings = 13;
	string created_at = 14;
	string updated_at = 15;
}

message ItemCreateMessage {
	string type = 1;
	bool enabled = 2;
	int32 ban_time = 3;
	string ban_message = 4;
	string warning_message = 5;
	bool check_clips = 6;
	int32 trigger_length = 7;
	int32 max_percentage = 8;
	repeated string deny_list = 9;
	repeated string denied_chat_languages = 10;
	repeated string excluded_roles = 11;
	int32 max_warnings = 12;
}

message ItemWithId {
	string id = 1;
	Item data = 2;
}

message CreateRequest {
	ItemCreateMessage data = 1;
}

message UpdateRequest {
	string id = 1;
	ItemCreateMessage data = 2;
}

message GetAllResponse {
	repeated ItemWithId body = 1;
}

message DeleteRequest {
	string id = 1;
}

message PatchRequest {
	string id = 1;
	bool enabled = 2;
}
